Removed body overflow issue

--- a/client/src/styles/App.sass
+++ b/client/src/styles/App.sass
@@ -1,2 +1,2 @@
 body
-    overflow-x: hidden 
+    // overflow-x: hidden 
